--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://Dung:%40tmd0212@cluster0.jkereu3.mongodb.net/groupDB?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://Dung:Dung1234@cluster0.jkereu3.mongodb.net/groupDB?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
