--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,23 +1,18 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules/
+backend/node_modules/
+frontend/node_modules/
 
-# testing
-/coverage
+# env
+.env
+backend/.env
+frontend/.env
 
-# production
-/build
-
-# misc
+# build & misc
+dist/
+build/
+coverage/
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
