cap nhat hoat dong 1,2

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
+PORT=4000
 MONGO_URI=mongodb+srv://Dung:Dung1234@cluster0.jkereu3.mongodb.net/groupDB?retryWrites=true&w=majority&appName=Cluster0
-PORT=3000
+JWT_SECRET=change_me_please
+JWT_EXPIRES=7d
