--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,9 @@
 PORT=4000
 MONGO_URI=mongodb+srv://Dung:Dung1234@cluster0.jkereu3.mongodb.net/groupDB?retryWrites=true&w=majority&appName=Cluster0
+
 JWT_SECRET=change_me_please
 JWT_EXPIRES=7d
+
+CLOUDINARY_CLOUD_NAME=dksuy12sh
+CLOUDINARY_API_KEY=922238267192889
+CLOUDINARY_API_SECRET=VLPWYGRsOlrENSkf-NP_OcY9moQ
