Thêm upload avatar với Cloudinary

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "backend",
+  "name": "activity2-rate-limiting",
   "version": "1.0.0",
-  "description": "Hoạt động 1: JWT Refresh Token & Session Management",
+  "description": "Hoạt động 2: Rate Limiting & Security",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1"
@@ -21,4 +23,3 @@
     "nodemon": "^3.1.10"
   }
 }
-
