--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "activity3-avatar-upload",
+  "name": "activity4-password-reset",
   "version": "1.0.0",
-  "description": "Hoạt động 3: Upload ảnh đại diện (Avatar) với Multer + Sharp + Cloudinary",
+  "description": "Hoạt động 4: Forgot Password & Reset Password với Email thật",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
@@ -19,8 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.5"
+    "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
