--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "activity4-password-reset",
-  "version": "1.0.0",
-  "description": "Hoạt động 4: Forgot Password & Reset Password với Email thật",
+  "name": "activity5-logging-rate-limit",
+  "version": "2.0.0",
+  "description": "Activity 5: Complete Backend - JWT + Rate Limit + Avatar + Password Reset + Activity Logging",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
@@ -10,18 +10,23 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
+    "express-slow-down": "^2.0.3",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
-    "nodemailer": "^6.9.16"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "axios": "^1.12.2",
     "nodemon": "^3.1.10"
   }
 }
