--- a/backend/package.json
+++ b/backend/package.json
@@ -1,32 +1,41 @@
 {
-  "name": "activity5-logging-rate-limit",
-  "version": "2.0.0",
-  "description": "Activity 5: Complete Backend - JWT + Rate Limit + Avatar + Password Reset + Activity Logging",
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "Group 12 Backend API - RBAC, Logging, Rate Limiting",
   "main": "server.js",
   "type": "commonjs",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
+    "dev": "nodemon server.js",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^1.41.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.18",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
-    "express-slow-down": "^2.0.3",
+    "express-slow-down": "^3.0.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.16",
-    "sharp": "^0.33.5"
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.9",
+    "sharp": "^0.34.4",
+    "useragent": "^2.3.0"
   },
   "devDependencies": {
-    "axios": "^1.12.2",
     "nodemon": "^3.1.10"
   }
 }
