Thêm phân quyền RBAC

--- a/backend/.env
+++ b/backend/.env
@@ -10,8 +10,8 @@ REFRESH_EXPIRES=7d
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_SECURE=true
-SMTP_USER=thanhtoandz03@gmail.com
-SMTP_PASS=enfv zaxb glmo pjgy
+SMTP_USER=yourgmail@gmail.com
+SMTP_PASS=your_app_password
 
 CLOUDINARY_CLOUD_NAME=dksuy12sh
 CLOUDINARY_API_KEY=922238267192889
