--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,44 @@
 {
   "name": "activity3-avatar-upload",
   "version": "1.0.0",
-  "description": "Hoạt động 3: Upload ảnh đại diện (Avatar) với Multer + Sharp + Cloudinary",
+  "description": "Activity 3: Avatar Upload with Multer + Sharp + Cloudinary + RBAC + Authentication",
   "main": "server.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seed:admin": "node makeAdmin.js"
   },
+  "keywords": [
+    "nodejs",
+    "express",
+    "mongodb",
+    "jwt",
+    "rbac",
+    "multer",
+    "sharp",
+    "cloudinary",
+    "avatar-upload"
+  ],
+  "author": "Group 12",
+  "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
+    "dotenv": "^16.3.1",
     "express": "^5.1.0",
-    "express-rate-limit": "^8.1.0",
-    "helmet": "^8.1.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.1",
-    "morgan": "^1.10.1",
+    "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
