--- a/backend/package.json
+++ b/backend/package.json
@@ -1,49 +1,32 @@
 {
-  "name": "activity4-password-reset",
-  "version": "1.0.0",
-  "description": "Activity 4: Password Reset with Real Email + Avatar Upload + RBAC + Authentication",
+  "name": "activity5-logging-rate-limit",
+  "version": "2.0.0",
+  "description": "Activity 5: Complete Backend - JWT + Rate Limit + Avatar + Password Reset + Activity Logging",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "seed:admin": "node makeAdmin.js"
+    "dev": "nodemon server.js"
   },
-  "keywords": [
-    "nodejs",
-    "express",
-    "mongodb",
-    "jwt",
-    "rbac",
-    "multer",
-    "sharp",
-    "cloudinary",
-    "avatar-upload",
-    "rate-limiting",
-    "password-reset",
-    "nodemailer",
-    "email"
-  ],
-  "author": "Group 12",
-  "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.41.0",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
+    "express-rate-limit": "^8.1.0",
+    "express-slow-down": "^2.0.3",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7",
-    "sharp": "^0.33.1"
+    "nodemailer": "^6.9.16",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "axios": "^1.12.2",
+    "nodemon": "^3.1.10"
   }
 }
