--- a/backend/.env
+++ b/backend/.env
@@ -1,15 +1,18 @@
 PORT=4000
+MONGODB_URI=mongodb+srv://Dung:Dung1234@cluster0.jkereu3.mongodb.net/groupDB?retryWrites=true&w=majority&appName=Cluster0
+CLIENT_URL=http://localhost:3000
 
-# MongoDB
-MONGO_URI=mongodb+srv://Dung:Dung1234@cluster0.jkereu3.mongodb.net/groupDB?retryWrites=true&w=majority
+JWT_ACCESS_SECRET=change_me_please_access
+JWT_REFRESH_SECRET=change_me_please_refresh
+ACCESS_EXPIRES=15m
+REFRESH_EXPIRES=7d
 
-# JWT config
-JWT_SECRET=change_me_please
-JWT_EXPIRES=7d
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_SECURE=true
+SMTP_USER=thanhtoandz03@gmail.com
+SMTP_PASS=enfv zaxb glmo pjgy
 
-# Cloudinary (rất quan trọng để upload ảnh)
-CLOUDINARY_URL=cloudinary://381327958866326:K5QhIuBSPiBRd-rvQTd7-B7G3Pk@dupwvqjea
-
-# Email dùng để gửi reset password
-EMAIL_USER=trinhmiinhdung@gmail.com
-EMAIL_PASS=iooaybbpgvcsmwdu
+CLOUDINARY_CLOUD_NAME=dksuy12sh
+CLOUDINARY_API_KEY=922238267192889
+CLOUDINARY_API_SECRET=VLPWYGRsOlrENSkf-NP_OcY9moQ
